# btrfs-backup-ng

./: .gitignore  AUTHENTICATION_ANALYSIS_SUMMARY.md  CHANGELOG.md  COMPLETE_FIX_STATUS_REPORT.md  COMPLETE_SUDO_PASSWORD_FIX.md  DIRECTORY_CREATION_FIX_COMPLETE.md  DOUBLE_PASSWORD_PROMPT_FIX.md  IMPLEMENTATION_STATUS.md  INTERACTIVE_PASSWORD_FIX_SUCCESS_REPORT.md  README.md  SUBPROCESS_PASSWORD_FIX.md  SUDO_PASSWORD_FIX_SUMMARY.md  SUDO_PASSWORD_PROGRESS_REPORT.md  WRITE_PERMISSIONS_DIAGNOSTIC_FIX.md  btrfs-ssh-send  codecov.yml  debug_sudo_retry_issue.py  direct-transfer-test  monitoring_demo.py  pyproject.toml  ssh-backup-verify  stdeb.cfg  test_complete_verification.py  test_directory_creation_final.py  test_directory_creation_fix.py  test_final_fix.py  test_import_only.py  test_interactive_password_fix.py  test_logic_only.py  test_monitoring.py  test_non_interactive.py  test_simple_password.py  test_subprocess_password_fix.py  test_sudo_fix.py  test_sudo_password_fix_demo.py  test_sudo_retry_fix.py  test_tty_logic.py  verify-remote-btrfs
btrfs_backup/: __init__.py  __main__.py  util.py
completions/: btrfs-backup-ng.bash  btrfs-backup-ng.fish  btrfs-backup-ng.zsh
docs/: CLI-REFERENCE.md  MIGRATING-FROM-BTRBK.md  SNAPPER-INTEGRATION.md
examples/: config.toml  minimal.toml  remote-backup.toml  server.toml  snapper.toml
man/: README.md  btrfs-backup-ng-config.1  btrfs-backup-ng-restore.1  btrfs-backup-ng-verify.1  btrfs-backup-ng.1
src/: README.md
tests/: conftest.py  test_atomic_commit_wiring.py  test_btrbk_import.py  test_btrbk_import_raw.py  test_chunked_transfer.py  test_cli.py  test_cli_common.py  test_cli_verify.py  test_completions.py  test_config_cmd.py  test_config_loader.py  test_config_schema.py  test_detection.py  test_doctor.py  test_error_delivery.py  test_errors.py  test_estimate.py  test_logger.py  test_manpages.py  test_native_restore_lock.py  test_notifications.py  test_progress.py  test_r1_legacy_exit_code.py  test_r1_local_transfer_returncode.py  test_r1_orchestration_contract.py  test_r1_raw_chunked_contract.py  test_r1_transfer_success_contract.py  test_r2_cleanup_recovery.py  test_r3_lock_persistence.py  test_r4_phase0_uuid_identity.py  test_r4_phase1_correspondence.py  test_r4_phase2_planner.py  test_r4_phase3a_restore.py  test_r4_phase3b2_snapper.py  test_r6_cli_roundtrip.py  test_r6_raw_encryption.py  (+41 more)
(+81 files in other folders)
